@@ -24,9 +24,11 @@ val transl_apply: ?should_be_tailcall:bool
                   -> Location.t -> lambda
 val transl_let: rec_flag -> value_binding list -> lambda -> lambda
 val transl_primitive: Location.t -> Primitive.description -> Env.t
-                      -> Types.type_expr -> lambda
+                      -> Types.type_expr -> Path.t option -> lambda
 
 val check_recursive_lambda: Ident.t list -> lambda -> bool
+
+val used_primitives: (Path.t, Location.t) Hashtbl.t
 
 type error =
     Illegal_letrec_pat
