@@ -210,6 +210,12 @@ value caml_reify_bytecode(value prog, value len)
   return Val_unit; /* not reached */
 }
 
+value caml_static_release_bytecode(value prog, value len)
+{
+  caml_invalid_argument("Meta.static_release_bytecode");
+  return Val_unit; /* not reached */
+}
+
 value * caml_stack_low;
 value * caml_stack_high;
 value * caml_stack_threshold;
